# kqueue_experiments

basic-client-server-kqueue/: CMakeLists.txt  build.sh  client.c  server.c
basic-client-server-kqueue/b/: clientkqcs  serverkqcs
config/: CMakeLists.txt  client.c  server.c  zc_config.c  zc_config.h  zircon.config
config/b/: clientkqcs  serverkqcs
ddd/zc_ddd_server/zc_ddd_server/: main.c
ddd/zc_ddd_server/zc_ddd_server.xcodeproj/: project.pbxproj
ddd/zc_ddd_server/zc_ddd_server.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
server/: ideas.txt
server/workers/: CMakeLists.txt  client.c  zc_bench_constants.h  zc_config.c  zc_connector.h  zc_malloc.h  zc_thread.c  zircon.config
server/workers/b/: clientkqcs
server/workers/s/: zc_conn.c  zc_conn.h  zc_cycle.c  zc_cycle.h  zc_fdmon.c  zc_fdmon.h  zc_kq.c  zc_kq.h  zc_launch.c  zc_launch.h  zc_log.c  zc_log.h  zc_main_func.c  zc_main_func.h  zc_mproc.c  zc_mproc.h  zc_proc.c  zc_proc.h  zc_req.c  zc_req.h  zc_server.c  zc_server.h  zc_types.c  zc_types.h  zc_worker.c  zc_worker.h  zc_wproc.c  zc_wproc.h
stress/: CMakeLists.txt  server.c  thread_1.txt  zc_bench.c  zc_bench.h  zc_client.c  zc_client.h  zc_client_state.c  zc_client_state.h  zc_config.c  zc_connector.c  zc_connector.h  zc_reader.c  zc_reader.h  zc_thread.c  zc_thread.h  zc_writer.c  zc_writer.h  zircon.config
stress/b/: clientkqcs  serverkqcs  thread_2.txt  thread_3.txt  thread_4.txt  zircon.config
